# PassGenAPI

./: .gitignore  Dockerfile  Makefile  README-en.md  README.md  manifest.json  pyproject.toml  requirements.txt  requirements_dev.txt  vercel.json
.github/workflows/: continuous_integration.yml
api/: main.py
api/generator/: password_generator.py
api/routes/: hash_generation_routes.py  main_routes.py  password_generation_routes.py
api/routes/models/: hash_model.py  password_model.py
app/: main.py
app/generator/: password_generator.py
app/routes/: password.py  password_generation_routes.py
app/routes/models/: password_model.py
docs/: README-en.md
passgenapi/: __init__.py  main.py
passgenapi/errors/: __init__.py  errors.py
passgenapi/generator/: __init__.py  hash_generator.py  password_generator.py
passgenapi/generators/: __init__.py  hash_generator.py  password_generator.py
passgenapi/routes/: __init__.py  hash_generation_routes.py  main_routes.py  password_generation_routes.py
passgenapi/routes/models/: __init__.py  hash_model.py  password_model.py
tests/: __init__.py  pytest.ini  test_api_password.py  test_hash_generator.py  test_password_generator.py
tests/units/: __init__.py  test_api_password.py  test_hash_generator.py  test_password_generator.py
