[tool.poetry]
name = "passgenapi"
version = "1.1.4"
description = "API to generate passwords and hashes"
authors = ["Nícolas Albuquerque Ramos <nicolasalbuquerque581@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
pytest = "^7.2.2"
requests = "^2.28.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
