[tool.poetry]
name = "passgenapi"
version = "1.1.10"
description = "API to generate passwords and hashes"
authors = ["Nícolas Albuquerque Ramos <nicolasalbuquerque581@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.94.1"
uvicorn = "0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
requests = "^2.28.2"
black = "^23.1.0"
prospector = {extras = ["with-vulture"], version = "^1.9.0"}
ipython = "^8.11.0"
pip-audit = "^2.5.1"
pyinstrument = "^4.4.0"
rich = "^13.3.3"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
